action-sheet completado

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
 
       <ion-back-button defaultHref="/"
       text="Atrás" color="primary"
-      mode="ion"></ion-back-button>
+      mode="ios"></ion-back-button>
 
      </ion-buttons>
     <ion-title class="ion-text-capitalize">{{title}}</ion-title>
