--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,5 +1,10 @@
 <component-header title="action sheet"/>
 
-<ion-content [fullscreen]="true">
+<ion-content class="ion-padding">
+
+ <ion-button (click)="onClick()"
+  expand="block">
+  Mostrar accion sheet
+ </ion-button>
 
 </ion-content>
