--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="ion-no-border">
+
   <ion-toolbar>
+
+
     <ion-buttons slot="start" >
 
       <ion-back-button defaultHref="/"
