--- a/src/app/pages/list/list.page.html
+++ b/src/app/pages/list/list.page.html
@@ -1,18 +1,39 @@
-<component-header title="List"/>
+<component-header title="List" />
 
 <ion-content [fullscreen]="true">
 
-<ion-list>
-@for (user of usuarios |async; track $index) {
-  <ion-item>
-    <ion-label>
-      <h3>{{user.name}}</h3>
-      <p>{{user.email}}</p>
-    </ion-label>
-    <ion-label slot="end"
-    class="ion-text-end text-small">{{user.phone}}</ion-label>
-  </ion-item>
-}
-</ion-list>
+  <ion-list>
+    @for (user of usuarios |async; track $index) {
+
+    <ion-item-sliding>
+
+      <ion-item-options side="start">
+        <ion-item-option color="primary" (click)="favorite(user)">
+          <ion-icon slot="icon-only" name="heart-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="warning" (click)="share(user)">
+          <ion-icon slot="icon-only" name="share-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+      <ion-item>
+        <ion-label>
+          <h3>{{user.name}}</h3>
+          <p>{{user.email}}</p>
+        </ion-label>
+        <ion-label slot="end" class="ion-text-end text-small">{{user.phone}}</ion-label>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="delete(user.name)">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-item-option>
+
+      </ion-item-options>
+
+    </ion-item-sliding>
+
+    }
+  </ion-list>
 
 </ion-content>
